# Case1/BackendService/Minor.Case1.AdministratieCursusenCursistenApi/Entiteiten/AddFromFileResultReport.cs
@@ -7,9 +7,19 @@ namespace Minor.Case1.AdministratieCursusenCursistenApi.Entiteiten
 {
     public class AddFromFileResultReport
     {
-        public int AantalDuplicatesInFile{ get; set; }
-        public int AantalInsertedCursusInstanties { get; set; }
-        public bool HasSyntaxError { get; set; }
-        public int? LineOfSyntaxError { get; set; }
+        public string ErrorMessage { get; private set; }
+        public int AantalAddedItems { get; private set; }
+        public int AantalDuplicateItems { get; private set; }
+
+        public AddFromFileResultReport(string message)
+        {
+            ErrorMessage = message;
+        }
+
+        public AddFromFileResultReport(int nAddedItems, int nDuplicateItems)
+        {
+            AantalAddedItems = nAddedItems;
+            AantalDuplicateItems = nDuplicateItems;
+        }
     }
 }
